--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,21 @@
   --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
   --activeItem: #f799a354;
 }
+
+.App {
+  background-image: linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.AppGlass {
+  display: grid;
+  height: 97%;
+  width: 97%;
+  background: var(--glass);
+  border-radius: 1rem;
+  grid-template-columns: 11rem auto 20rem;
+  overflow: hidden;
+}
